--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,13 +1,27 @@
 <Project>
 
   <PropertyGroup>
-    <AdminVersion>7.2.0.26</AdminVersion>
-    <PluginVersion>9.0.2.28</PluginVersion>
-    <ProPluginVersion>9.0.2.50</ProPluginVersion>
+    <AdminVersion>7.2.0.29</AdminVersion>
+    <PluginVersion>9.0.2.30</PluginVersion>
+    <ProPluginVersion>9.0.2.51</ProPluginVersion>
   </PropertyGroup>
 
   <PropertyGroup>
-    <NoWarn>CS8603;CS8618;CS1591;CS8625;CS8602;CS8604;CS8600;CS8601;CS8714;CS8619;CS8629;CS8765;CS8634;CS8621;CS8767;CS8633;CS8620;CS8610;CS8631;CS8605;CS8622;CS8613;NU5100;NU5104;NU1903;NU1902;</NoWarn>
+	  
+	  <AnalysisModeDesign>None</AnalysisModeDesign>
+	  <AnalysisModeDocumentation>All</AnalysisModeDocumentation>
+	  <AnalysisModeGlobalization>None</AnalysisModeGlobalization>
+	  <AnalysisModeInteroperability>All</AnalysisModeInteroperability>
+	  <AnalysisModeMaintainability>All</AnalysisModeMaintainability>
+	  <AnalysisModeNaming>None</AnalysisModeNaming>
+	  <AnalysisModePerformance>All</AnalysisModePerformance>
+	  <AnalysisModeSingleFile>All</AnalysisModeSingleFile>
+	  <AnalysisModeReliability>All</AnalysisModeReliability>
+	  <AnalysisModeSecurity>All</AnalysisModeSecurity>
+	  <AnalysisModeUsage>None</AnalysisModeUsage>
+	  <AnalysisModeStyle>None</AnalysisModeStyle>
+	  
+	  <NoWarn>CS8603;CS8618;CS1591;CS8625;CS8602;CS8604;CS8600;CS8601;CS8714;CS8619;CS8629;CS8765;CS8634;CS8621;CS8767;CS8633;CS8620;CS8610;CS8631;CS8605;CS8622;CS8613;NU5100;NU5104;NU1903;NU1902;</NoWarn>
     <TargetFrameworks>net9.0;net8.0;net6.0;</TargetFrameworks>
     <LangVersion>12.0</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
