--- a/src/Foundation/ThingsGateway.Foundation.Razor/ThingsGateway.Foundation.Razor.csproj
+++ b/src/Foundation/ThingsGateway.Foundation.Razor/ThingsGateway.Foundation.Razor.csproj
@@ -16,7 +16,7 @@
 
 
 	<ItemGroup>
-		<PackageReference Include="ThingsGateway.Razor" Version="$(AdminVersion)" />
+		<ProjectReference Include="..\..\..\Admin\src\ThingsGateway.Razor\ThingsGateway.Razor.csproj" />
 	</ItemGroup>
 
 
