--- a/src/Foundation/ThingsGateway.Foundation/ThingsGateway.Foundation.csproj
+++ b/src/Foundation/ThingsGateway.Foundation/ThingsGateway.Foundation.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="9.0.0" />
-    <PackageReference Include="ThingsGateway.NewLife.X" Version="$(AdminVersion)" />
+	  <ProjectReference Include="..\..\..\Admin\src\ThingsGateway.NewLife.X\ThingsGateway.NewLife.X.csproj" />
     <PackageReference Include="TouchSocket" Version="3.0.8" />
     <PackageReference Include="TouchSocket.SerialPorts" Version="3.0.8" />
   </ItemGroup>
