--- a/src/ThingsGateway.Winform/ThingsGateway.Winform.csproj
+++ b/src/ThingsGateway.Winform/ThingsGateway.Winform.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <Import Project="$(SolutionDir)Version.props" />
-  <Import Project="..\ThingsGateway.Server\targets\Admin.targets" />
+  <!--<Import Project="..\ThingsGateway.Server\targets\Admin.targets" />-->
   <Import Project="..\ThingsGateway.Server\targets\Plugin.targets" />
   <Import Project="..\ThingsGateway.Server\targets\CustomPlugin.targets" />
   <Import Project="..\ThingsGateway.Server\targets\Custom.targets" />
