--- a/src/ThingsGateway.Server/targets/Gateway.targets
+++ b/src/ThingsGateway.Server/targets/Gateway.targets
@@ -3,8 +3,8 @@
 <!--Gateway-->
 
   <ItemGroup>
-    <PackageReference Include="ThingsGateway.Gateway.Razor" Version="$(GatewayVersion)" />
-    <PackageReference Include="ThingsGateway.Gateway.Application" Version="$(GatewayVersion)" GeneratePathProperty="true"/>
+    <PackageReference Include="ThingsGateway.Gateway.Razor" Version="$(Version)" />
+    <PackageReference Include="ThingsGateway.Gateway.Application" Version="$(Version)" GeneratePathProperty="true"/>
   </ItemGroup>
   
   <Target Name="_ResolveCopyGatewayLocalNuGetPkgXmls" AfterTargets="ResolveReferences">
