--- a/src/ThingsGateway.Server/ThingsGateway.Server.csproj
+++ b/src/ThingsGateway.Server/ThingsGateway.Server.csproj
@@ -108,5 +108,6 @@
 	</ItemGroup>
 
 	<Import Project="targets\Gateway.targets" Condition=" '$(SolutionName)' == 'ThingsGatewayRelease' " />
+	<Import Project="targets\Admin.targets"  Condition=" '$(SolutionName)' == 'ThingsGatewayRelease' " />
 
 </Project>
