--- a/src/ThingsGateway.Server/ThingsGateway.Server.csproj
+++ b/src/ThingsGateway.Server/ThingsGateway.Server.csproj
@@ -5,7 +5,7 @@
 	<Import Project="targets\CustomPlugin.targets" />
 	<Import Project="targets\Custom.targets" />
 	<!--<Import Project="targets\Admin.targets" />-->
-	<!--<Import Project="targets\OtherPlugin.targets" />-->
+	<Import Project="targets\OtherPlugin.targets" />
 	<!--<Import Project="targets\OtherPlugin1.targets" />-->
 	<PropertyGroup>
 		<CustomTargetFramework>$(TargetFramework)</CustomTargetFramework>
